--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -14,6 +14,22 @@
     visibility: hidden;
 }
 
+
+.modalBackgroundModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: blue (0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    opacity: 0;
+    transition: opacity 300ms ease-in-out;
+    visibility: hidden;
+}
 .modalBackground.active {
     opacity: 1;
     visibility: visible;
@@ -37,6 +53,31 @@
     transform: scale(1);
 }
 
+.imageContainerColorModal{
+    height: 520px;
+    width: 100%;
+    border-radius: 20px 20px 0 0 ;
+    margin-bottom: 16px;
+    background-color: rgba(71, 89, 176, 0.629);
+    position: relative;
+}
+
+.imageContainerModal{
+    height: 520px;
+    width: 100%;
+    border-radius: 20px 20px 0 0 ;
+    margin-bottom: 16px;
+}
+
+.countItemModal{
+    position:absolute;
+    top:20%;
+    font-size: 45px;
+    z-index: 200;
+    left: 47%;
+    font-weight:bold;
+}
+
 .closeButton {
     align-self: flex-end;
     font-size: 25px;
@@ -49,7 +90,9 @@
     width: 100%;
     height: auto;
     border-radius: 10px;
+    overflow-x: hidden;
 }
+
 
 .dishTitle {
     margin-top: 15px;
