--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -34,14 +34,8 @@
     border-radius: 20px 20px 0 0 ;
     margin-bottom: 16px;
     background-color: rgba(71, 89, 176, 0.629);
-    opacity: 20%;
-    z-index: 100;
     position: relative;
-    display: block; 
-    object-fit: cover;
-    transition: background-color 0.3s ease;
 }
-
 
 .imageContainer{
     height: 220px;
@@ -55,15 +49,16 @@
     width: 100%;
     border-radius: 20px 20px 0 0 ;
     margin-bottom: 16px;
-    cursor: pointer;
-    z-index: 0;
-    position: relative;
 }
-.img:active {
-    color: plum;
-    background-color: blueviolet !important;
-  }
-  
+
+  .imgCount{
+    height: 220px;
+    width: 100%;
+    border-radius: 20px 20px 0 0 ;
+    margin-bottom: 16px;
+    cursor: pointer;
+    opacity: 20%;
+}
 
 .countItem{
     position:absolute;
