--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -15,21 +15,7 @@
 }
 
 
-.modalBackgroundModal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: blue (0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    opacity: 0;
-    transition: opacity 300ms ease-in-out;
-    visibility: hidden;
-}
+
 .modalBackground.active {
     opacity: 1;
     visibility: visible;
@@ -43,7 +29,7 @@
     flex-direction: column;
     align-items: center;
     max-width: 400px;
-    max-height: 80%;
+    max-height: 60%;
     overflow-y: auto;
     transform: scale(0.9);
     transition: all 300ms ease-in-out;
@@ -53,30 +39,43 @@
     transform: scale(1);
 }
 
-.imageContainerColorModal{
+.imageContainerColorModal {
     height: 520px;
     width: 100%;
-    border-radius: 20px 20px 0 0 ;
+    border-radius: 20px 20px 0 0;
     margin-bottom: 16px;
     background-color: rgba(71, 89, 176, 0.629);
     position: relative;
 }
 
-.imageContainerModal{
+.imageContainerModal {
     height: 520px;
     width: 100%;
-    border-radius: 20px 20px 0 0 ;
+    border-radius: 20px 20px 0 0;
     margin-bottom: 16px;
 }
 
-.countItemModal{
-    position:absolute;
-    top:20%;
-    font-size: 45px;
+.modalCount {
+    position: absolute;
+    top: 40%;
+    left: 10px;
+    font-size: 60px;
     z-index: 200;
     left: 47%;
-    font-weight:bold;
+    font-weight: bold;
+    color: white;
 }
+
+.modalImgColor {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px 20px 0 0;
+    margin: 0;
+    cursor: pointer;
+    opacity: 20%;
+}
+
+
 
 .closeButton {
     align-self: flex-end;
@@ -88,9 +87,10 @@
 
 .dishImage {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 10px;
     overflow-x: hidden;
+    border-radius: 20px 20px 0 0;
 }
 
 
@@ -101,7 +101,7 @@
     text-align: center;
 }
 
-.dishAttribute{
+.dishAttribute {
     color: grey;
     font-size: 14px;
 }
